--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         var web3;
         var counter;
         const url = "http://localhost:8545";
-        const contractAddress = "0x51f2A24cC0465fda1d2B1330749E2C479Cd4466b";
+        const contractAddress = "metamaskaddress";
         const abi = [
 	{
 		"inputs": [],
